# blaze-platform

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .hlint.yaml  .hspec  CHANGELOG.md  DevelopersGuide.md  Dockerfile  Dockerfile.base  Dockerfile.binja  Dockerfile.ghidra  Justfile  LICENSE  Makefile  README.md  UsageExamples.md  cabal.project  cabal.project.dev  docker-compose.yaml  flint.cabal  fourmolu.yaml  haze.cabal  hie.yaml  hinja.cabal  install_notes.txt  lts-20.0.cabal.config  lts-22.11.cabal.config  package.yaml  stack-dev.yaml  stack-release.yaml  stack.yaml  stack.yaml.binja  update
.ci/scripts/: run_stack_test.py
.docker/: binary_ninja_updater.py  buildkit.toml  run_test.py  submit-findings.py
.github/workflows/: build.yml  changelog.yml  docker.yml
app/: Main.hs
app/create-ghidra-db/: Main.hs
app/find_mlil/: Main.hs
app/gen_pil_ops/: Main.hs
binary-analysis/: LICENSE  README.md  binary-analysis.cabal  package.yaml  stack.yaml
binary-analysis/src/Data/: BinaryAnalysis.hs
binary-analysis/test/Data/: BinaryAnalysisSpec.hs
binaryninja-haskell/: Dockerfile  Justfile  Makefile  README.md  binaryninja.cabal  package.yaml  stack.yaml
binaryninja-haskell/binja-header-cleaner/: .gitignore  binja-header-cleaner.cabal  package.yaml
binaryninja-haskell/res/: binaryninjacore.h
binaryninja-haskell/src/Binja/: Architecture.hs  Function.hs  MLIL.hs  Prelude.hs  Reference.hs  View.hs
binaryninja-haskell/test/: Main.hs
binaryninja-haskell/test/Binja/: CoreSpec.hs  TypeLibrarySpec.hs
binja-header-cleaner/: ChangeLog.md  README.md  hie.yaml  package.yaml  stack.yaml
binja-header-cleaner/app/clean/: Main.hs
binja-header-cleaner/app/gen-mlil-op-modules/: Main.hs
blaze/: .dockerignore  .gitignore  blaze.cabal  package.yaml  stack.yaml
blaze/app/find_mlil/: Main.hs
blaze/app/gen_pil_ops/: Main.hs  Printer.hs
blaze/blaze-binaryninja/: ChangeLog.md  README.md  blaze-binaryninja.cabal  package.yaml
blaze/blaze-binaryninja/benchmarks/: CallGraph.hs
blaze/demo/: Main.hs
blaze/demo/Blaze/: SearchDemo.hs
blaze/res/json/: dive_logger_aggressive_expand_failure_path.json
blaze/src/Blaze/: CallGraph.hs  Cfg.hs  CfgDot.hs  Concurrent.hs  Fir.hs  Function.hs  Graph.hs  IndirectCallResolution.hs  Path.hs  Pil.hs  Prelude.hs  Pretty.hs  Search.hs  Util.hs  VTable.hs
blaze/test/ghidra/: Main.hs
demo/Blaze/: LoopChallenge.hs  PathDemo.hs
demo/Blaze/Pil/: PathDemo.hs
demo/Blaze/Util/: MLILDemo.hs
demo/Demo1/: Main.hs
demo/Dive_Logger/: Main.hs
demo/Kernel/: Main.hs
demo/ev1smm/: Main.hs
demo_bins/demo1/: demo1
demo_bins/execution_reasoning/: Makefile  input_genesis.c  input_simple.c
demo_bins/taint_tests/: Makefile  cfg_test  cfg_test.c  cfs_test  cfs_test.c  heap_overflow.c
flint/: .mcp.json  CLAUDE.md  FlintShellAgentGuide.md  Justfile  LICENSE  Makefile  README.md  flint.cabal  hie.yaml  out  package.yaml  stack.yaml
flint/app/: Main.hs
flint/app/binaryToGhidra/: Main.hs
flint/app/flint/: Main.hs
flint/app/flint-mcp/: Main.hs
flint/app/flint-shell/: Main.hs
flint/app/flint_classic/: Main.hs
flint/app/gen_flint_db/: Main.hs
flint/app/gen_primspec/: Main.hs
flint/app/routes/: Main.hs
flint/demo/Demo1/: Main.hs
flint/demo/Dive_Logger/: Main.hs
flint/demo/Kernel/: Main.hs
flint/demo/ev1smm/: Main.hs
flint/demo/plt_thunk/: Main.hs
flint/flint-binaryninja/: flint-binaryninja.cabal  package.yaml
flint/res/: primspec.toml
flint/res/scripts/: in_like_flint.py
flint/src/Flint/: Analysis.hs  App.hs  Cfg.hs  Graph.hs  Prelude.hs  Query.hs  SMTish.hs  Util.hs
flint/test/Flint/: CfgSpec.hs  GraphSpec.hs  QuerySpec.hs  SMTishSpec.hs  UtilSpec.hs
flint/test/Helper/: Primitives.hs
ghidra-haskell/: .gitignore  .hlint.yaml  LICENSE  Makefile  README.md  ghidra.cabal  hie.yaml  out  package.yaml  stack.yaml
ghidra-haskell/.ci/scripts/: run_test.py
ghidra-haskell/app/create-ghidra-db/: Main.hs
ghidra-haskell/java/: PcodeHelper.java
ghidra-haskell/scripts/: getGhidraJar.sh
ghidra-haskell/src/Ghidra/: Address.hs  BasicBlock.hs  Clang.hs  Core.hs  DataTypes.hs  ExternalLocation.hs  Function.hs  GhidraDataTypes.hs  Inspect.hs  Instruction.hs  Pcode.hs  PcodeBlock.hs  Prelude.hs  Program.hs  Reference.hs  Register.hs  State.hs  Symbol.hs  Types.hs  Variable.hs
ghidra-haskell/test/: Main.hs
ghidra-haskell/test/Ghidra/: AddressSpec.hs  BasicBlockSpec.hs  ClangCAstSpec.hs  ClangDecompSpec.hs  CoreSpec.hs  (+8 more)
res/: binaryninjacore.h
res/bridge/: ffijni.c  ffijni.h  hfunction.h
res/c/: java.c
res/scripts/: dump_fixed_addrs
scripts/: getGhidraJar.sh
src/: Binja.hs  Hinja.hs  HinjaC.chs
src/Binja/: Analysis.hs  Architecture.hs  BasicBlock.hs  Core.hs  Function.hs  MLIL.hs  Prelude.hs  Reference.hs  TypeLibrary.hs  Variable.hs  View.hs
src/Blaze/: CallGraph.hs  Cfg.hs  Checker.hs  Checker2.hs  CheckerTest.hs  Fir.hs  Function.hs  Graph.hs  HChecker.hs  IndirectCallResolution.hs  Path.hs  Pil.hs  Prelude.hs  Pretty.hs  Reduction.hs  Reduction2.hs  Search.hs  Solver.hs  Solver2.hs  Util.hs  VTable.hs
src/Clojure/: JNI.hs  Safer.hs  Unsafe.hs
src/Flint/: Analysis.hs  Cfg.hs  Prelude.hs  Uefi.hs  Util.hs
src/Ghidra/: Address.hs  BasicBlock.hs  Core.hs  Function.hs  Instruction.hs  Pcode.hs  PcodeBlock.hs  Prelude.hs  Program.hs  Reference.hs  Register.hs  State.hs  Types.hs  Util.hs  Variable.hs
src/Haze/: Cfg.hs  Checker.hs  Function.hs  Path.hs  Pil.hs  Prelude.hs  Reduction.hs  Reduction2.hs  Solver.hs
src/Hinja/: Architecture.hs  BasicBlock.hs  Core.hs  Function.hs  MLIL.hs  Main.hs  ParseComment.hs  ParseEnums.hs  ParseFunction.hs  ParseHeader.hs  ParseStruct.hs  Prelude.hs  Types.hs  Variable.hs
src/Language/: Clojure.hs
test/Binja/: CoreSpec.hs  TypeLibrarySpec.hs
test/Blaze/: CallGraphSpec.hs  CfgSpec.hs  FirSpec.hs  GraphSpec.hs  PathSpec.hs  SearchSpec.hs  Util.hs
test/Flint/: QuerySpec.hs
test/Ghidra/: AddressSpec.hs  BasicBlockSpec.hs  FunctionSpec.hs  InstructionSpec.hs  PcodeBlockSpec.hs  PcodeSpec.hs  ProgramSpec.hs  ReferenceSpec.hs  StateSpec.hs
(+1115 files in other folders)
