cabal-version:      2.4
name:               flint
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Matt Revelle, Matt Parker, Kevin Orr
maintainer:         drone@bitrit.es, mp@kududyn.com, kevino@kududyn.com
                    
-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

-- source-repository this
--     type: git
--     location: https://github.com/kudu-dynamics/inline-java.git
--     tag: d0514b1d899f2b513e18296dd5706adcf5b6e563
--     subdir: jni

-- source-repository this
--     type: git
--     location: https://github.com/kudu-dynamics/inline-java.git
--     tag: d0514b1d899f2b513e18296dd5706adcf5b6e563
--     subdir: jvm

-- source-repository this
--     type: git
--     location: https://github.com/tweag/distributed-closure
--     tag: 0eaace06ad1e9d80d13287b4e3b1e03f314082ed

library
    exposed-modules:
        Flint.Prelude
      , Flint.Analysis.Uefi
      , Flint.Analysis
      , Flint.Types.Analysis
      , Flint.Cfg
      , Flint.Cfg.Store
      , Flint.Types.Cfg.Store
    hs-source-dirs:
        src
    default-extensions:
      AllowAmbiguousTypes
      DataKinds
      DeriveAnyClass
      DerivingStrategies
      DuplicateRecordFields
      FunctionalDependencies
      GADTs
      LambdaCase
      NoImplicitPrelude
      NoMonomorphismRestriction
      OverloadedLabels
      OverloadedStrings
      TypeFamilies
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -j4 -O2 -threaded
    build-depends:
        aeson
      , algebraic-graphs ==0.6.1
      , async
      , base >=4.7 && <5
      , bimap
      , blaze
      , bv
      , bytestring
      , casing
      , constraints
      , containers
      , data-binary-ieee754
      , directory
      , dlist
      , envy
      , extra
      , generic-lens
      , ghidra
      , hashable
      , lens
      , list-t
      , megaparsec
      , mtl
      , newtype
      , parser-combinators
      , pretty-simple
      , random
      , raw-strings-qq
      , recursion-schemes
      , relude
      , sbv >=8.6 && <10
      , stm
      , streamly
      , string-conversions
      , template-haskell
      , text
      , transformers
      , unordered-containers
      , uuid >=1.3.14
      , vector
    default-language: GHC2021
    -- mixins:   base hiding (Prelude)
    --     , relude (Relude as Prelude)
    --     , relude

executable flint
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    default-extensions:
      AllowAmbiguousTypes
      DataKinds
      DeriveAnyClass
      DerivingStrategies
      DuplicateRecordFields
      FunctionalDependencies
      GADTs
      LambdaCase
      NoImplicitPrelude
      NoMonomorphismRestriction
      OverloadedLabels
      OverloadedStrings
      TypeFamilies
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -Wredundant-constraints -j4 -O2 -threaded -rtsopts -with-rtsopts=-N
    build-depends:
            aeson
          , algebraic-graphs ==0.6.1
          , async
          , base >=4.7 && <5
          , bimap
          , binary-analysis
          , binaryninja
          , blaze
          , bv
          , bytestring
          , casing
          , constraints
          , containers
          , data-binary-ieee754
          , directory
          , dlist
          , envy
          , extra
          , flint
          , generic-lens
          , ghidra
          , hashable
          , lens
          , list-t
          , megaparsec
          , mtl
          , newtype
          , parser-combinators
          , pretty-simple
          , random
          , raw-strings-qq
          , recursion-schemes
          , relude
          , sbv >=8.6
          , stm
          , streamly
          , string-conversions
          , template-haskell
          , text
          , transformers
          , unordered-containers
          , uuid >=1.3.14
          , vector
    hs-source-dirs:   app
    default-language: GHC2021
    -- mixins:   base hiding (Prelude)
    --     , relude (Relude as Prelude)
    --     , relude


executable kernel-demo
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    default-extensions:
      AllowAmbiguousTypes
      DataKinds
      DeriveAnyClass
      DerivingStrategies
      DuplicateRecordFields
      FunctionalDependencies
      GADTs
      LambdaCase
      NoImplicitPrelude
      NoMonomorphismRestriction
      OverloadedLabels
      OverloadedStrings
      TypeFamilies
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -Wredundant-constraints -j4 -O2 -threaded -rtsopts -with-rtsopts=-N
    build-depends:
            aeson
          , algebraic-graphs ==0.6.1
          , async
          , base >=4.7 && <5
          , bimap
          , binary-analysis
          , binaryninja
          , blaze
          , bv
          , bytestring
          , casing
          , constraints
          , containers
          , data-binary-ieee754
          , directory
          , dlist
          , envy
          , extra
          , flint
          , generic-lens
          , ghidra
          , hashable
          , lens
          , list-t
          , megaparsec
          , mtl
          , newtype
          , parser-combinators
          , pretty-simple
          , random
          , raw-strings-qq
          , recursion-schemes
          , relude
          , sbv >=8.6
          , stm
          , streamly
          , string-conversions
          , template-haskell
          , text
          , transformers
          , unordered-containers
          , uuid >=1.3.14
          , vector
    hs-source-dirs:   demo/Kernel
    default-language: GHC2021
    -- mixins:   base hiding (Prelude)
    --     , relude (Relude as Prelude)
    --     , relude


executable demo1-demo
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    default-extensions:
      AllowAmbiguousTypes
      DataKinds
      DeriveAnyClass
      DerivingStrategies
      DuplicateRecordFields
      FunctionalDependencies
      GADTs
      LambdaCase
      NoImplicitPrelude
      NoMonomorphismRestriction
      OverloadedLabels
      OverloadedStrings
      TypeFamilies
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -Wredundant-constraints -j4 -O2 -threaded -rtsopts -with-rtsopts=-N
    build-depends:
            aeson
          , algebraic-graphs ==0.6.1
          , async
          , base >=4.7 && <5
          , bimap
          , binary-analysis
          , binaryninja
          , blaze
          , bv
          , bytestring
          , casing
          , constraints
          , containers
          , data-binary-ieee754
          , directory
          , dlist
          , envy
          , extra
          , flint
          , generic-lens
          , ghidra
          , hashable
          , lens
          , list-t
          , megaparsec
          , mtl
          , newtype
          , parser-combinators
          , pretty-simple
          , random
          , raw-strings-qq
          , recursion-schemes
          , relude
          , sbv >=8.6
          , stm
          , streamly
          , string-conversions
          , template-haskell
          , text
          , transformers
          , unordered-containers
          , uuid >=1.3.14
          , vector
    hs-source-dirs:   demo/Demo1
    default-language: GHC2021
    -- mixins:   base hiding (Prelude)
    --     , relude (Relude as Prelude)
    --     , relude
